# esp32_control_servo

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/esp_wireguard/: CMakeLists.txt
components/esp_wireguard/src/: wireguard-platform.c  wireguard.c
main/: CMakeLists.txt  Kconfig.projbuild  alert_service.c  app_main.c  console_task.c  http_api.c  ota_service.c  servo_control.c  status_store.c  wifi_service.c  wireguard_service.c
main/include/: alert_service.h  console_task.h  ota_service.h  servo_control.h  status_store.h  wifi_service.h  wireguard_service.h
tools/: enter_idf_env.ps1  host_heartbeat_agent.ps1  host_heartbeat_agent.py
